@@ -1,6 +1,8 @@
 #ifndef __DIALOG_HH__
 #define __DIALOG_HH__
 
+#include "bw.h"
+
 #ifdef __cplusplus
 extern "C" {
 #endif /* __cplusplus */
@@ -14,7 +16,7 @@ const char *a_Dialog_save_file(const char *msg,
 char *a_Dialog_open_file(const char *msg,
                          const char *pattern, const char *fname);
 void a_Dialog_text_window(const char *txt, const char *title);
-
+void a_Dialog_findtext(BrowserWindow *bw);
 
 #ifdef __cplusplus
 }
